--- a/.vscode/vex_project_settings.json
+++ b/.vscode/vex_project_settings.json
@@ -6,7 +6,7 @@
 	"project": {
 		"name": "ProgrammingDEPT",
 		"description": "Period 6 Programming Dept",
-		"creationDate": "Fri, 11 Apr 2025 02:47:56 GMT",
+		"creationDate": "4/10/2025, 3:20:43 PM",
 		"platform": "V5",
 		"language": "python",
 		"slot": 1,
