--- a/.vscode/vex_project_settings.json
+++ b/.vscode/vex_project_settings.json
@@ -1,12 +1,12 @@
 {
 	"extension": {
-		"version": "0.6.1",
+		"version": "0.7.2025041600",
 		"json": 2
 	},
 	"project": {
 		"name": "ProgrammingDEPT",
 		"description": "Period 6 Programming Dept",
-		"creationDate": "Fri, 11 Apr 2025 03:54:21 GMT",
+		"creationDate": "Thu, 15 May 2025 20:19:51 GMT",
 		"platform": "V5",
 		"language": "python",
 		"slot": 1,
